--- a/demo/index.html
+++ b/demo/index.html
@@ -11,7 +11,7 @@
 <body>
 	<div class="menu">
 		<div>
-			<a href="mailto:julian.cwirko@gmail.com"><i class="icon-envelope"></i> E-mail</a> <a href="http://www.redsunmedia.pl"><i class="icon-link"></i> WWW</a> <a href="https://github.com/juliancwirko/vsts"><i class="icon-github"></i> GitHub</a>
+			<a href="mailto:julian.cwirko@gmail.com"><i class="icon-envelope"></i> E-mail</a> <a href="http://www.redsunmedia.pl"><i class="icon-link"></i> WWW</a> <a href="https://github.com/juliancwirko/asrp"><i class="icon-github"></i> GitHub</a>
 		</div>
 	</div>
 	<div class="container">
